--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,7 @@ p .feather {
     min-height: fit-content;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 80ch) {
     h1 {
         font-size: 1.6em;
     }
